--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-filter==24.2
 django-storages==1.14.4
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+drf-standardized-errors==0.14.1
 jmespath==1.0.1
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
